package oefening2;

/**
 * A class representing cards.
 */
public class Card {
    public final String kind;
    public final int value;
}
