package oefening2;

public class GoalStack {
}
