package oefening2;

public class Joker extends Card {

    public Joker() {
        super(0, null);
    }

}
