package oefening2;

public class SourceStack {
}
