@startuml

abstract StackOfCards{
    + int capacity (hoeft niet met ArrayList)
    + int length
    + Stack<Cards> stackOfCards

    + Stack(int capacity)

    + void fromMoveTo(StackOfCards stackOfCards)
    + void add(Card card)
    + Card pop()
    + int getCapacity()
    + int getSize()
    - Card peek()
    + List printAllCards()
}

class GoalStack{
    ..Override..
    + Card peek()
}

class HelpStack{

}

class SourceStack{
    ..Override..
    + Card peek()
}

'Cards are immutable
abstract Card{
    + {static} value: int
    + {static} kind: String

    + canPutCardOn(Card card): boolean
}

class Jack{
}

class NumberedCard{
}

class Joker{
}

'Inheritance
StackOfCards <|-- GoalStack
StackOfCards <|-- SourceStack
StackOfCards <|-- HelpStack
Card <|-- Jack
Card <|-- Joker
Card <|-- NumberedCard

'Bidirectional relation
Card "1" - "*" StackOfCards
HelpStack <-->  GoalStack

'Unidirectional relation
SourceStack --> GoalStack : if 1 higher or 1 lower


@enduml